Updating ol tag definitions to fix text wrapping issue

--- a/assets/stylesheets/_work.scss
+++ b/assets/stylesheets/_work.scss
@@ -1,5 +1,10 @@
 // work
 
+.work h1 {
+  margin: 3rem 0 4rem 0;
+}
+
+
 .work .hero img {
   display: block;
   object-fit: cover;
@@ -25,28 +30,68 @@
 }
 
 
-.work ol {
-  list-style: none;
+ul {
+  list-style-position: inside;
+  margin: 0;
   padding: 0;
-  counter-reset: steps;
-}
-.work ol li {
-  counter-increment: steps;
-  margin-bottom: .5em;
 }
 
-.work ol li::before {
-  content: counter(steps);
-  margin-right: 0.5rem;
-  background: #ff6f00;
-  color: white;
-  width: 1.45em;
-  height: 1.45em;
-  border-radius: 50%;
-  display: inline-grid;
-  place-items: center;
-  line-height: 1.2em;
+ol {
+  counter-reset: li;
+  list-style-type: none;
+  line-height: 1.25;
+  padding-left: 0;
+
+  li {
+    position: relative;
+    padding: 5px 0 5px 2em;
+
+    &:before {
+      content: counter(li);
+      counter-increment: li;
+      height: 20px;
+      width: 20px;
+      //border: 1px solid blue;
+      border-radius: 50%;
+
+
+      background: #212121;
+      color: white;
+      //place-items: center;
+
+
+      text-align: center;
+      position: absolute;
+      left: 0;
+      top: 4px;
+    }
+  }
 }
+
+
+
+// .work ol {
+//   list-style: none;
+//   padding: 0;
+//   counter-reset: steps;
+// }
+// .work ol li {
+//   counter-increment: steps;
+//   margin-bottom: .5em;
+// }
+
+// .work ol li::before {
+//   content: counter(steps);
+//   margin-right: 0.5rem;
+//   background: #ff6f00;
+//   color: white;
+//   width: 1.45em;
+//   height: 1.45em;
+//   border-radius: 50%;
+//   display: inline-grid;
+//   place-items: center;
+//   line-height: 1.2em;
+// }
 
 .work .box-shadow {
 
